@@ -1,4 +1,4 @@
-<!DOCTYPE kpartgui SYSTEM "kpartgui.dtd"><kpartgui name="KPresenter" version="87">
+<!DOCTYPE kpartgui SYSTEM "kpartgui.dtd"><kpartgui name="KPresenter" version="88">
 <MenuBar>
  <Menu name="file"><text>&amp;File</text>
   <Separator/>
@@ -583,6 +583,7 @@
  <Action name="open_link"/>
  <Action name="change_link"/>
  <Action name="copy_link"/>
+ <Action name="add_to_bookmark"/>
  <ActionList name="datatools_link"/>
 </Menu>
 <Menu name="note_popup">
