@@ -270,3 +270,4 @@ Changes after KWord-1.2
 - Spellchecker can spell check only a selection
 - Shadow is a character properties.
 - Add "copy link"
+- Add "Add to bookmark"
