@@ -119,3 +119,4 @@ Changes after KPresenter 1.2
 - Spell checker can spellcheck only selection
 - Now Shadow is a text properties
 - Add "copy link" feature.
+- Add "add to bookmark" feature
